fix undoing range reducing to apply only to COUNTIFS (tdf#150618)

Before 7674399aac661eb503d7badc53b9a4d68bd9839d the code tried
to range-reduce all operations except for COUNTIFS, the commit added
handling also COUNTIFS and then later undo the rare cases when it
shouldn't be done, but the undo wasn't specific to COUNTIFS even
though it should have.

Change-Id: Ibdb6516a1ac7bc7d34f16f8a99781859e9fc7b60
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/138880
Tested-by: Jenkins
Reviewed-by: Luboš Luňák <l.lunak@collabora.com>
(cherry picked from commit 5367616819e232e7ef2405c614bbfa3ca0d2aecf)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/138974
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
(cherry picked from commit e20d52afe5a33ae9490e238e7b5833d3df68f004)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/139416
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>
Reviewed-by: Eike Rathke <erack@redhat.com>
Tested-by: Christian Lohmaier <lohmaier+LibreOffice@googlemail.com>
Reviewed-by: Christian Lohmaier <lohmaier+LibreOffice@googlemail.com>